<resources>
    <string name="create_sample_bulletin">Create Bulletin</string>
    <string name="error_message">Error</string>
    <string name="confirm_default">Are you sure?</string>
    <string name="user_preferences">Settings</string>
    <string name="title_author_preference">Author</string>
    <string name="title_language_preference">Bulletin language</string>
    <string name="summary_language_preference">Please select language you will enter bulletin data in</string>
    <string name="retry_server">Re-enter</string>
    <string name="cancel_server">Cancel</string>
    <string name="title_timeout_preference">Timeout</string>
    <string name="summary_timeout_preference">In minutes</string>
    <string name="dialog_title_timeout_preference">Timeout duration</string>
    <string name="title_wifi_only_preference">Use Wi-Fi Only</string>
    <string name="wifi_only_preference_on">Only send data when Wi-Fi is available</string>
    <string name="version_name_label">Version name %1$s</string>
    <string name="version_code_label">Build %1$s</string>
    <string name="settings_title">Settings</string>
    <string name="alert_dialog_password">Password:</string>
    <string name="alert_dialog_confirm_password">Confirm Password:</string>
    <string name="alert_dialog_magic_word">Magic Word:</string>
    <string name="password_dialog_title">Login</string>
    <string name="use_default_server">Use default server</string>
    <string name="advanced_server_options">Advanced server settings</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="create_account_dialog_cancel">Exit</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="error_create_account">Error creating account</string>
    <string name="error_getting_server_key">Error connecting to server</string>
    <string name="no_upload_rights">Incorrect Magic Word</string>
    <string name="create_account_dialog_title">Create a password</string>
    <string name="create_account_intro">Welcome to Martus! First, create a new Mobile Martus account.</string>
    <string name="choose_server_intro">Next, configure a connection to the Martus server you will be sending bulletins to.</string>
    <string name="import_hq_intro">Finally, enter information about the Martus account that you are sending your Mobile Martus bulletins to.\n\nYou must have a Martus Public Account ID file (ending with “.mpi”) and public code from the Martus Desktop account that you want to receive your Mobile Martus bulletins to complete this step.</string>
    <string name="tor_option_intro">Next, turn on Tor if desired.</string>
    <string name="goto_server_setup_button">Next</string>
    <string name="quit_menu_title">Logout</string>
    <string name="server_menu_title">Select Server</string>
    <string name="add_contact_using_access_token">Add Contact from Server</string>
    <string name="add_contact_from_file">Import Contact from File</string>
    <string name="import_contact_title">Import contact</string>
    <string name="install_orbot_">Install Orbot</string>
    <string name="you_must_have_orbot">You must have Orbot installed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_orbot_message">Please reinstall Orbot from the Google Play Store</string>
    <string name="invalid_orbot_title">Invalid Orbot Installation</string>
    <string name="start_orbot_">Start Orbot</string>
    <string name="orbot_doesn_t_appear_to_be_running_would_you_like_to_start_it_up_and_connect_to_tor_">Orbot is not running. Would you like to start it?</string>
    <string formatted="false" name="use_tor"><b>Use Tor</b> (May help hide that you are connecting to a Martus server, and may help reach the Martus servers if they are blocked from your location, but will slow sending of bulletins )</string>
    <string name="stop_orbot">Stop Orbot</string>
    <string name="orbot_running_should_stop_message">Orbot is running. Would you like to stop it?</string>
    <string name="tor_label">Tor</string>
    <string name="about_tor_label">Understanding Tor</string>
    <string name="create_password_hint">New password</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="enter_magic_word_hint">Enter Magic Word</string>
    <string name="settings_pwd_equal">Passwords match!</string>
    <string name="settings_pwd_not_equal">Passwords don\'t match!</string>
    <string name="invalid_password">Password must be at least 8 characters long</string>
    <string name="success_magic_word">You have successfully set up a connection to the Martus server!</string>
    <string name="problem_confirming_magic_word">Error confirming Magic Word</string>
    <string name="success_import_hq_key">You have successfully configured a Martus Desktop account to receive your Mobile Martus bulletins. Mobile Martus setup is complete!</string>
    <string name="progress_confirming_magic_word">Confirming Magic Word</string>
    <string name="confirm_reset_install">Are you sure you want to delete?</string>
    <string name="confirm_go_to_device_home">Are you sure you want to leave Martus?</string>
    <string name="confirm_logout">Are you sure want to logout?</string>
    <string name="confirm_reset_install_extra_no_pending"> </string>
    <string name="confirm_data_loss">If you leave this screen now, you will lose any data you have entered. Are you sure you want to leave?</string>
    <plurals name="confirm_reset_install_extra">
        <item quantity="one">You will lose %1$s unsent or currently sending bulletin.</item>
        <item quantity="other">You will lose %1$s unsent or currently sending bulletins.</item>
    </plurals>
    <plurals name="show_unsent_count">
        <item quantity="one">You have %1$s unsent bulletin. You may go to the Tools menu and resend it.</item>
        <item quantity="other">You have %1$s unsent bulletins. You may go to the Tools menu and resend them.</item>
    </plurals>
    <string name="starting_send_notification">Sending …</string>
    <string name="show_unsent_title">You have unsent bulletins.</string>
    <string name="reset_to_install">Delete My Account</string>
    <string name="replace_contact_menu_item">Update Contact</string>
    <string name="ping_server_menu_item">Check Server</string>
    <string name="ping_result_ok">Server is up</string>
    <string name="ping_result_down">Server is down</string>
    <string name="no_network_connection">Device has no connectivity!</string>
    <string name="no_network_create_bulletin_warning">Any bulletin you try to send will fail due to lack of connectivity. (You may have Wi-Fi Only checked in Settings.) \n\n But clicking Send will encrypt and save the bulletin, and when you have connectivity, you may resend it from the Tools menu.</string>
    <string name="logout_while_sending_title">Can\'t logout yet</string>
    <string name="logout_while_sending_message">Please wait until the bulletin has finished sending.</string>
    <string name="reset_while_sending_title">Can\'t reset yet</string>
    <string name="confirm_tamper_reset_title">Setup Error</string>
    <string name="confirm_tamper_reset_message">There has been an error with your setup files. In the interest of security, please delete your account. Pressing the Yes button will start this process. Martus will not work with a corrupted settings file, so pressing No will exit Martus.</string>
    <string name="view_docs_menu">Link to Help Docs</string>
    <string name="contact_us_menu_item">Contact Us</string>
    <string name="view_public_code_menu_item">View Public Code</string>
    <string name="resend_menu_item">Resend Unsent Bulletins</string>
    <string name="resending">Resending!</string>
    <string name="resending_no_bulletins">You have no unsent bulletins.</string>
    <string name="resending_no_network">You don\'t have connectivity, or have Wi-Fi Only turned on.</string>
    <string name="help_menu">Help</string>
    <string name="view_public_code_dialog_title">Public Code</string>
    <string name="view_new_public_code_message">Public Code (New):\n%1$s</string>
    <string name="view_old_public_code_message">Public Code (Old):\n%1$s</string>
    <string name="view_public_code_dialog_error">Unable to show Public Code</string>
    <string name="send_public_account_id_menu_item">Email Public Account ID</string>
    <string name="send_public_account_id_menu_item_via_bulletin">Send Public Account ID in Bulletin</string>
    <string name="manage_my_account_menu">Manage My Account</string>
    <string name="manage_bulletins_menu">Manage Bulletins</string>
    <string name="export_public_account_id_menu_item">Export Public Account ID</string>
    <string name="export_public_account_id_dialog_title">Export Public Account ID Error</string>
    <string name="export_public_account_id_dialog_error">Unable to export Account ID</string>
    <string formatted="false" name="contact_us_info">If you have any questions or feedback on Martus, please email info@martus.org</string>
    <string formatted="false" name="view_docs_info" translate="false">https://www.martus.org/mobile/docs </string>
    <string name="show_version">Show Version</string>
    <string name="exported_account_id_file_confirmation">Exported To</string>
    <string name="progress_creating_account">Creating Account</string>
    <string name="send_bulletin">Send</string>
    <string name="send_failed_cant_reach_server">Can\'t reach server</string>
    <string name="add_attachment">Add attachment</string>
    <string name="title_summary">Summary</string>
    <string name="summary_optional_label">Optional</string>
    <string name="default_author">Unknown Author</string>
    <string name="title_hint">Title</string>
    <string name="problem_creating_bulletin">Couldn\'t create new bulletin</string>
    <string name="problem_adding_attachment">Error adding attachment to bulletin</string>
    <string name="bulletin_sending_progress">Sending…</string>
    <string name="bulletin_packaging_progress">Encrypting and zipping…</string>
    <string name="failure_zipping_bulletin">Failed zipping bulletin</string>
    <string name="failure_choosing_file">Failed choosing file</string>
    <string name="attachment_no_longer_exists">Couldn\'t send because the following attachment, %1$s , has been deleted from the device</string>
    <string name="confirm_cancel_bulletin">Cancel this Bulletin?</string>
    <string name="confirm_remove_attachment">Remove %1$s ?</string>
    <string name="must_login_first_title">Warning!</string>
    <string name="must_login_first_message">You must first login before sending this bulletin</string>
    <string name="install_file_explorer">Try another file explorer</string>
    <string name="fetching_picasa_image">Fetching Picasa image</string>
    <string name="fetched_picasa_image">Got Picasa image</string>
    <string name="custom_form_transition">This is your chance to add any attachments or press back to edit form entry.</string>
    <string name="invalid_server_ip">Invalid IP Address</string>
    <string name="invalid_server_code">Invalid Server Public Code</string>
    <string name="invalid_server_info">Invalid Server Information Entered</string>
    <string name="successful_server_choice">Successfully connected to server!</string>
    <string name="error_computing_public_code">Error saving server preferences</string>
    <string name="progress_connecting_to_server">Connecting to server</string>
    <string name="desktop_sync_public_code">Then enter Martus Desktop account Public Code:</string>
    <string name="attachments_add_label">Attachments:</string>
    <string name="view_access_token_menu_item">View Access Token</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="general_preferences">Settings</string>
</resources>