
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/password_dialog_title"
        style="@style/PopupDialogStyle"/>

    <TextView
            android:id="@+id/password_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:text="@string/alert_dialog_password"
            android:gravity="left"
            style="@style/MartusHeading1" />

    <org.martus.android.dialog.TextViewWithCorrectTextDirection
            android:id="@+id/password_edit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:scrollHorizontally="true"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:password="true"
            android:hint="@string/enter_password_hint"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:focusable="true"
            style="@style/MartusTextViewStyle"/>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel_button"
        android:layout_weight="1.0"
        style="@style/Widget.Button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/ok_button"
        android:layout_weight="1.0"
        style="@style/Widget.Button" />

    </LinearLayout>
</LinearLayout>